--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     border-radius: 24px;
     transition: border-color 0.3s ease, transform 0.3s ease;
   }
+  .hobby-block img {
+    width: 50px;
+    height: 50px;
+  }
   #hobby-block-1.hobby-block:hover {
     border-color: #00A67C;
   }
@@ -35,4 +39,9 @@ body {
     background: linear-gradient(45deg, #00A67C, #FF9E00, #EF002A);
     text-align: center;
     padding: 20px;
+  }
+
+  .footer img {
+    width: 25px;
+    height: 25px;
   }
